Project

General

Profile

Actions

Bug #16445

closed

Whitelist EBUSY error from "snap unprotect" for journal replay

Added by Jason Dillaman almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If the OpFinishEvent's return code is "-EBUSY" for a snap unprotect event, do not attempt to replay the snap unprotect operation since it failed after detecting child images.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16485: jewel: Whitelist EBUSY error from "snap unprotect" for journal replayResolvedLoïc DacharyActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Loïc Dachary almost 8 years ago

  • Copied to Backport #16485: jewel: Whitelist EBUSY error from "snap unprotect" for journal replay added
Actions #4

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF