librbd: ignore snap unprotect -EBUSY errors during journal replay

Fixes: http://tracker.ceph.com/issues/16445
Signed-off-by: Jason Dillaman <dillaman@redhat.com>